Fixes misaligned about me section in user popup
Just added a margin to the about me header and text.

--- a/src/theme/popouts/_userpopout.scss
+++ b/src/theme/popouts/_userpopout.scss
@@ -332,4 +332,9 @@
 			top: 85px;
 		}
 	}
+	
+	.userInfoSection-3her-v {
+    		margin-bottom: 16px;
+    		margin-left: 10px;
+	}
 }
